# foocatJL

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: foocatJL.rst  modules.rst
tests/: test_foocatJL.py
