[tool.poetry]
name = "foocatJL"
version = "0.1.0"
description = "Sample python package for demonstration"
authors = ["Jarome Leslie <jsleslie@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
